[package]
name = "pyforwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyforwarder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
makiko = "0.2"
tokio = { version = "1.25", features = ["full"] }
pyo3-log = "0.9.0"
